# vercel-python-sdk

./: LICENSE  pyproject.toml
.cursor/rules/: ai-sdk-python.mdc
docs/: docs.json
docs/examples/: tool-agent.mdx
docs/sdk/: agent.mdx  introduction.mdx  tool.mdx
examples/: agent_example.py  embeddings_example.py  gemini_demo.py  generate_object_example.py  generate_text_example.py  stream_object_example.py  stream_text_example.py  tool_calling_example.py
src/ai_sdk/: __init__.py  agent.py  embed.py  generate_text.py  tool.py  types.py  ui_stream.py
src/ai_sdk/providers/: gemini.py
tests/: manual_test.py  test_ai_sdk.py  test_embed.py  test_gemini.py  test_tool_calling.py
